<resources>
    <string name="app_name">OQV Beta</string>
    <string name="search">Search</string>
    <string name="title_movies">Movies</string>
    <string name="title_shows">TV Shows</string>
    <string name="preferences">Settings</string>
    <string name="title_my_watch_list">Your list</string>
    <string name="title_friends_activities">Friends</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="genres">Genres</string>
    <string name="no_data_found">No data found</string>
    <string name="loading_data">Loading data…</string>
    <string name="terms">This is an high alpha version of the app. Bugs are expected\nRegister view does not call the server side of the app yet.\nGood testing</string>
    <string name="leave">Quit</string>
    <string name="accept">Accept</string>
    <string name="your_profile">Profile</string>
    <string name="title_discover_movies">Discover</string>
    <string name="your_activity">Your Activity</string>
    <string name="title_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username_login">Name</string>
    <string name="invalid_email">Enter a valid email</string>
    <string name="invalid_password">Password must have 4 to 16 characters</string>
    <string name="logged_in">Connected</string>
    <string name="connecting">Authenticating…</string>
    <string name="login_btn">Login</string>
    <string name="btn_create_account">Create Account</string>
    <string name="login_account_label">Already have an Account? Login</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="invalid_name">Name must be alphanumeric and have at least 5 characters</string>
    <string name="confirm_password_failed">Password confirmation does not match</string>
    <string name="creating_account">Creating account…</string>
    <string name="account_created">Account created</string>
    <string name="ok">OK</string>
    <string name="error_on_response">Error on server response</string>
    <string name="error_getting_response">Error on getting server response</string>
    <string name="com_facebook_login_canceled">Facebook login canceled</string>

    <string name="facebook_app_id" translatable="false">1233374160031410</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1233374160031410</string>

    <string name="logout">Logout</string>
    <string name="guest_name">Guest</string>
    <string name="title_sign_up">Sign Up</string>

    <string name="privacy">Privacy</string>
    <string name="terms_of_use">Terms of use</string>

    <string name="image_logo_transition_login">fragment_image_logo_transition_login</string>
    <string name="login_or_alternatives">Or…</string>
    <string name="access_account_choose">Login Methods</string>

    <string name="loading_details">Loading details…</string>
    <string name="searching">Searching</string>
    <string name="movies_error">No movies found</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_search_results">No search results found</string>
    <string name="cover_image_transition">cover_image_transition</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="mark_as_watched">Mark as watched</string>
    <string name="recommend_title">Recommend to a friend</string>
    <string name="director">Director</string>
    <string name="cast">Cast</string>
    <string name="no_images_to_show">There\'s no media to show</string>
    <string name="validating_credentials">Validating credentials</string>
    <string name="no_account_associated">No account associated with this facebook profile</string>
    <string name="create_account_associating_facebook">You can create an account now and associate with this facebook</string>
    <string name="ask_create_account_with_facebook_info">Create account using Facebook</string>
    <string name="info_create_account_with_facebook">Create an account using facebook info?</string>
    <string name="obtaining_access">Obtaining Access…</string>
    <string name="nothing_watched">Nothing watched yet</string>
    <string name="time_watched_minutes">%d minutes watched</string>
    <string name="only_one_account">Only one account can be created</string>
    <string name="cover_update_success">Cover Updated</string>
    <string name="one_account_allowed">Only one account allowed</string>
    <string name="marked_as_watched">Marked as watched</string>
    <string name="mark_failed">Failed marking media</string>
    <string name="no_permission">Insufficient Permissions</string>
    <string name="already_marked">Already watched</string>
    <string name="login_again">Failed in login, log in again</string>
    <string name="not_yet_implemented">Not implemented yet</string>
    <string name="options">Options</string>
    <string name="failed_to_update_cover">Failed to update cover</string>
    <string name="failed_performing_request">Failed performing request</string>
    <string name="add_to_watchlist_success">Added to watchlist</string>
    <string name="already_added">Already added</string>
    <string name="score">Rating</string>
    <string name="select_profile_image">Select a Profile Image</string>
    <string name="not_on_watchlist">Title is not on watchlist</string>
    <string name="removed_from_watchlist_success">Removed from watchlist</string>
    <string name="failed_to_login">Invalid username or password</string>
    <string name="email_already_taken">Email already taken</string>
    <string name="sign_out">Sign out</string>
    <string name="background_image">Background Image</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="unsuccessful_response">Unsuccessful response</string>
    <string name="login_failed">Login failed</string>
    <string name="terms_privacy_login_label">By logging in you accept our terms of use and privacy policy</string>
    <string name="login_text_get_notified">Get notified when your favorite show is about to start</string>
    <string name="login_text_ger_recommendations">Recommend Movies and TV Shows to your friends</string>
    <string name="login_text_app_desc_short">WatchTime is a Movie/TV Show tracker</string>
</resources>
