<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.watchtime.activities.LoginActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        tools:src="@drawable/background_test_image"
        android:contentDescription="@string/background_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:id="@+id/background_image_black"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg"
        android:alpha="0.7"
        android:contentDescription="@string/background_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:id="@+id/app_logo_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"/>

    <ImageView
        android:id="@+id/app_logo_written_image"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:src="@drawable/app_logo_written"
        android:layout_alignBottom="@+id/app_logo_image"
        android:layout_toEndOf="@+id/app_logo_image"
        android:layout_marginStart="21dp"
        android:contentDescription="@string/app_name"/>
    
    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/center_text_0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/login_text_app_desc_short"
        android:visibility="visible"/>

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/center_text_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/login_text_ger_recommendations"
        android:visibility="gone"/>

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/center_text_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/login_text_get_notified"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_facebook_login"
        android:onClick="facebookLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAllCaps="false"
        android:text="@string/com_facebook_loginview_log_in_button_long"
        android:drawableStart="@drawable/com_facebook_button_icon"
        android:background="@color/com_facebook_blue"
        android:layout_marginBottom="95dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:id="@+id/btn_google_login"
        android:onClick="googleLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAllCaps="false"
        android:text="@string/log_in_with_google"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:background="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/terms_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_privacy_login_label"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
