<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_access_account_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.watchtime.fragments.account.AccessAccountFragment">

    <LinearLayout
        android:id="@+id/container_b"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/excellent_health">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:background="@color/primary">

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/login_text"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/title_login"
                android:gravity="center"
                android:textSize="@dimen/text_account_sizes"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.42"
            android:orientation="vertical"
            android:background="@color/primary_green">

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/register_text"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:text="@string/title_sign_up"
                android:gravity="center"
                android:textSize="@dimen/text_account_sizes"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:gravity="center">
                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/privacy_label"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/privacy"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:gravity="center">
                <com.devspark.robototextview.widget.RobotoTextView
                    android:id="@+id/terms_label"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/terms_of_use" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
